--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "sharestocsv",
   "dependencies": {
+    "bignumber.js": "^9.1.1",
     "chalk": "^4.1.2",
     "clear": "^0.1.0",
     "commander": "^9.4.1",
@@ -11,7 +12,10 @@
   "devDependencies": {
     "@types/clear": "^0.1.2",
     "@types/figlet": "^1.5.5",
+    "@types/jest": "^29.2.4",
     "@types/node": "^18.11.17",
+    "jest": "^29.3.1",
+    "ts-jest": "^29.0.3",
     "ts-node": "^10.9.1",
     "tslint": "^6.1.3",
     "typescript": "^4.9.4"
@@ -26,6 +30,6 @@
     "build": "tsc -p .",
     "local": "sudo npm i -g && pizza",
     "refresh": "rm -rf ./node_modules ./package-lock.json && npm install",
-    "test": "echo \"Warn: no test specified\""
+    "test": "jest"
   }
 }
