--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "ts-jest": "^29.0.3",
     "ts-node": "^10.9.1",
     "tslint": "^6.1.3",
+    "typedoc": "^0.23.23",
     "typescript": "^4.9.4"
   },
   "main": "dist/index.js",
