--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,5 +16,9 @@
     },
     "include": [
         "src/**/*"
-    ]
+    ],
+    "typedocOptions": {
+        "entryPoints": ["src/index.ts", "src/controller/**/*", "src/models/**/*", "src/services/**/*"],
+        "out": "docs"
+    }
 }
