updated readme and entry point

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,6 +22,7 @@
     ],
     "typedocOptions": {
         "entryPoints": ["src/index.ts", "src/controller/**/*", "src/models/**/*", "src/services/**/*"],
-        "out": "docs"
+        "out": "docs",
+        "exclude": "**/__tests__/*",
     }
 }
